update the homepage link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -241,9 +241,9 @@ import '../styles/glyphicons.scss'
                         <li>
                             <a
                                 class='btn success'
-                                href='https://github.com/melonjs/melonJS#using-melonjs'
+                                href='/tutorial'
                                 role='button'
-                                >Getting Started
+                                >Beginner's Tutorial
                             </a>
                         </li>
                         <li>
