--- a/src/pages/docs.astro
+++ b/src/pages/docs.astro
@@ -2,4 +2,4 @@
 import Redirect from '../components/Redirect.astro'
 ---
 
-<Redirect to='https://melonjs.github.io/melonJS/docs/' />
+<Redirect to="https://melonjs.github.io/melonJS/docs/" />
