--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import '../styles/glyphicons.scss'
 ---
 
 <BaseLayout>
-    <style lang='scss'>
+    <style lang="scss">
         @import '../styles/variables.scss';
         main {
             h1,
@@ -209,13 +209,13 @@ import '../styles/glyphicons.scss'
         }
     </style>
     <main>
-        <div class='jumbotron'>
-            <div class='container'>
+        <div class="jumbotron">
+            <div class="container">
                 <img
-                    class='banner'
-                    src='/img/logo.svg'
-                    alt='melonjs banner'
-                    width='80%'
+                    class="banner"
+                    src="/img/logo.svg"
+                    alt="melonjs banner"
+                    width="80%"
                 />
                 <h1>Fresh, modern &amp; lightweight</h1>
                 <p>
@@ -228,37 +228,37 @@ import '../styles/glyphicons.scss'
                     Giving you a powerful combination that can be used wholesale
                     or piecemeal.
                 </p>
-                <nav class='quick-start'>
+                <nav class="quick-start">
                     <ul>
                         <li>
                             <a
-                                class='btn primary'
-                                href='https://www.npmjs.com/package/melonjs'
-                                role='button'
-                                ><span class='glyphicon glyphicon-save'></span> Download
+                                class="btn primary"
+                                href="https://www.npmjs.com/package/melonjs"
+                                role="button"
+                                ><span class="glyphicon glyphicon-save"></span> Download
                             </a>
                         </li>
                         <li>
                             <a
-                                class='btn success'
-                                href='/tutorial'
-                                role='button'
+                                class="btn success"
+                                href="/tutorial"
+                                role="button"
                                 >Beginner's Tutorial
                             </a>
                         </li>
                         <li>
                             <a
-                                class='btn danger'
-                                href='https://melonjs.github.io/examples/platformer/'
-                                role='button'
+                                class="btn danger"
+                                href="https://melonjs.github.io/examples/platformer/"
+                                role="button"
                                 >Demo
                             </a>
                         </li>
                         <li>
                             <a
-                                class='btn default'
-                                href='https://melonjs.github.io/docs/'
-                                role='button'
+                                class="btn default"
+                                href="https://melonjs.github.io/docs/"
+                                role="button"
                                 >Read The Docs &raquo;
                             </a>
                         </li>
@@ -266,14 +266,14 @@ import '../styles/glyphicons.scss'
                 </nav>
             </div>
         </div>
-        <div class='row three'>
+        <div class="row three">
             <div>
                 <h2>Fast</h2>
                 <img
-                    class='right'
+                    class="right"
                     height={128}
-                    src='/img/icons/HTML5_Badge.png'
-                    alt='HTML5'
+                    src="/img/icons/HTML5_Badge.png"
+                    alt="HTML5"
                 />
                 <blockquote>
                     <p>Built with modern technology.</p>
@@ -312,7 +312,7 @@ import '../styles/glyphicons.scss'
             </div>
         </div>
 
-        <div class='band'>
+        <div class="band">
             <h2>Powerful Level Design</h2>
             <p>
                 melonJS integrates the popular Tiled map format, allowing
@@ -321,17 +321,17 @@ import '../styles/glyphicons.scss'
             </p>
             <br />
             <img
-                src='/img/alex4-github.png'
-                title='Fast and Powerful level design through Tiled'
-                width='85%'
-                height='85%'
-                class='computer'
+                src="/img/alex4-github.png"
+                title="Fast and Powerful level design through Tiled"
+                width="85%"
+                height="85%"
+                class="computer"
             />
         </div>
 
-        <div class='row two'>
+        <div class="row two">
             <div>
-                <h2>Features<a id='features' class='anchor'></a></h2>
+                <h2>Features<a id="features" class="anchor"></a></h2>
                 <hr />
                 <ul>
                     <li>A fresh and lightweight 2D sprite-based engine</li>
@@ -395,7 +395,7 @@ import '../styles/glyphicons.scss'
                     </li>
                     <li>
                         As light as less than <a
-                            href='https://bundlephobia.com/result?p=melonjs@latest'
+                            href="https://bundlephobia.com/result?p=melonjs@latest"
                         >
                             100kb
                         </a> minified & gzipped
@@ -403,104 +403,104 @@ import '../styles/glyphicons.scss'
                 </ul>
             </div>
 
-            <div class='col-md-6'>
+            <div class="col-md-6">
                 <img
-                    class='right no-mobile'
-                    width='150'
-                    src='/img/icons/browser_icons.png'
-                    alt='browser icons example'
+                    class="right no-mobile"
+                    width="150"
+                    src="/img/icons/browser_icons.png"
+                    alt="browser icons example"
                 />
-                <h2>Compatibility<a id='compatibility' class='anchor'></a></h2>
+                <h2>Compatibility<a id="compatibility" class="anchor"></a></h2>
                 <hr />
                 <p>melonJS works with any full ES5/ES6 compatible browsers</p>
-                <table class='table browsers'>
+                <table class="table browsers">
                     <thead>
                         <tr><th>Browser</th><th>Version</th><th>Status</th></tr>
                     </thead>
                     <tbody>
                         <tr>
                             <th>
-                                <a href='https://www.google.com/chrome/'
+                                <a href="https://www.google.com/chrome/"
                                     >Chrome
                                 </a>
                             </th>
                             <td>55+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
                         <tr>
                             <th
-                                ><a href='https://www.apple.com/safari/'
+                                ><a href="https://www.apple.com/safari/"
                                     >Safari
                                 </a>
                             </th>
                             <td>10+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
                         <tr>
                             <th
-                                ><a href='https://www.mozilla.com/'>Firefox</a>
+                                ><a href="https://www.mozilla.com/">Firefox</a>
                             </th>
                             <td>50+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
                         <tr>
-                            <th><a href='https://www.opera.com/'>Opera</a></th>
+                            <th><a href="https://www.opera.com/">Opera</a></th>
                             <td>42+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
                         <tr>
                             <th
-                                ><a href='https://www.microsoft.com/en-us/edge'
+                                ><a href="https://www.microsoft.com/en-us/edge"
                                     >Edge
                                 </a>
                             </th>
                             <td>20+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
                         <tr>
                             <th
                                 ><a
-                                    href='https://www.google.com/chrome/browser/mobile/'
+                                    href="https://www.google.com/chrome/browser/mobile/"
                                     >Chrome for Mobile
                                 </a>
                             </th>
                             <td>55+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
                         <tr>
                             <th
-                                ><a href='https://www.apple.com/safari/'
+                                ><a href="https://www.apple.com/safari/"
                                     >iOS Safari
                                 </a>
                             </th>
                             <td>9.3+</td>
                             <td
                                 ><span
-                                    class='glyphicon glyphicon-check text-success'
+                                    class="glyphicon glyphicon-check text-success"
                                 ></span>
                             </td>
                         </tr>
@@ -511,34 +511,34 @@ import '../styles/glyphicons.scss'
 
         <div>
             <h2>Developer Spotlight</h2>
-            <div class='spotlight'>
+            <div class="spotlight">
                 <div>
-                    <a href='https://playerkillers.exchange'
+                    <a href="https://playerkillers.exchange"
                         >Player Killers' Exchange
                     </a>
-                    <div class='content'>
+                    <div class="content">
                         <iframe
-                            class='youtube'
-                            width='500'
-                            height='315'
-                            src='https://www.youtube.com/embed/ArryxLedtDI'
-                            frameborder='0'
-                            allow='utoplay; picture-in-picture'
+                            class="youtube"
+                            width="500"
+                            height="315"
+                            src="https://www.youtube.com/embed/ArryxLedtDI"
+                            frameborder="0"
+                            allow="utoplay; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
                 </div>
                 <div>
-                    <a href='https://www.melongaming.com/games/ne-fi/'
+                    <a href="https://www.melongaming.com/games/ne-fi/"
                         >Nerd Fight
-                    </a> by <a href='https://www.melongaming.com/'
+                    </a> by <a href="https://www.melongaming.com/"
                         >melongaming
                     </a>
-                    <div class='content'>
+                    <div class="content">
                         <img
-                            width='500'
-                            height='315'
-                            src='https://play-lh.googleusercontent.com/diXWPhIE_lLeMs7uk5gAFFzSqCQjEv4LrCGmFKRt60d7E7pJ6sZIkxm1Ii4dttY90w=w1440-h620'
-                            alt='nerd fight'
+                            width="500"
+                            height="315"
+                            src="https://play-lh.googleusercontent.com/diXWPhIE_lLeMs7uk5gAFFzSqCQjEv4LrCGmFKRt60d7E7pJ6sZIkxm1Ii4dttY90w=w1440-h620"
+                            alt="nerd fight"
                         />
                     </div>
                 </div>
@@ -547,7 +547,7 @@ import '../styles/glyphicons.scss'
 
         <div>
             <h3>
-                Third Party Tools Integration<a id='third-party' class='anchor'
+                Third Party Tools Integration<a id="third-party" class="anchor"
                 ></a>
             </h3>
             <hr />
@@ -555,44 +555,44 @@ import '../styles/glyphicons.scss'
             party tools :
             <br />
             <ul>
-                <a href='https://www.mapeditor.org'>
+                <a href="https://www.mapeditor.org">
                     <img
-                        src='https://user-images.githubusercontent.com/4033090/136762999-5a7f377b-4136-4205-9fe0-83728c90cb9b.png'
+                        src="https://user-images.githubusercontent.com/4033090/136762999-5a7f377b-4136-4205-9fe0-83728c90cb9b.png"
                     />
                 </a>
-                <a href='https://www.codeandweb.com/texturepacker'>
+                <a href="https://www.codeandweb.com/texturepacker">
                     <img
-                        src='https://user-images.githubusercontent.com/4033090/136762472-bc55a638-c69b-4ff5-9d03-c684c8bea0ea.png'
+                        src="https://user-images.githubusercontent.com/4033090/136762472-bc55a638-c69b-4ff5-9d03-c684c8bea0ea.png"
                     />
                 </a>
-                <a href='https://free-tex-packer.com'>
+                <a href="https://free-tex-packer.com">
                     <img
-                        src='https://user-images.githubusercontent.com/4033090/136762061-1d3a0dfe-dbe0-4d3d-808d-47a49ecf5309.png'
+                        src="https://user-images.githubusercontent.com/4033090/136762061-1d3a0dfe-dbe0-4d3d-808d-47a49ecf5309.png"
                     />
                 </a>
-                <a href='https://www.codeandweb.com/physicseditor'>
+                <a href="https://www.codeandweb.com/physicseditor">
                     <img
-                        src='https://user-images.githubusercontent.com/4033090/136762890-b1010c7f-cb19-4d35-a3f1-f5048db07835.png'
+                        src="https://user-images.githubusercontent.com/4033090/136762890-b1010c7f-cb19-4d35-a3f1-f5048db07835.png"
                     />
                 </a>
-                <a href='https://renderhjs.net/shoebox/'>
+                <a href="https://renderhjs.net/shoebox/">
                     <img
-                        src='https://user-images.githubusercontent.com/4033090/136762705-92027d94-d87c-4a95-b051-26647410248d.png'
+                        src="https://user-images.githubusercontent.com/4033090/136762705-92027d94-d87c-4a95-b051-26647410248d.png"
                     />
                 </a>
-                <a href='https://cordova.apache.org'>
+                <a href="https://cordova.apache.org">
                     <img
-                        src='https://user-images.githubusercontent.com/4033090/136763147-6d157ce6-6921-437e-bb8f-0287b86109da.png'
+                        src="https://user-images.githubusercontent.com/4033090/136763147-6d157ce6-6921-437e-bb8f-0287b86109da.png"
                     />
                 </a>
             </ul>
         </div>
-        <div class='band'>
+        <div class="band">
             <footer>
                 <p>&#169; AltByte Pte Ltd 2011-2022</p>
                 <img
-                    src='https://user-images.githubusercontent.com/4033090/136692693-35dca8aa-5012-4a37-9ea2-51640d2e6d73.png'
-                    alt='AltByte'
+                    src="https://user-images.githubusercontent.com/4033090/136692693-35dca8aa-5012-4a37-9ea2-51640d2e6d73.png"
+                    alt="AltByte"
                 />
             </footer>
         </div>
