--- a/src/layouts/MDLayout.astro
+++ b/src/layouts/MDLayout.astro
@@ -1,11 +1,11 @@
 ---
 import BaseLayout from './BaseLayout.astro'
 import '../styles/markdown.scss'
-const {props} = Astro
-const passProps = {...props?.content}
+const { props } = Astro
+const passProps = { ...props?.content }
 delete passProps.astro
 ---
 
 <BaseLayout {...passProps}>
-    <main class="md"><slot></slot></main>
+    <main class="md"><slot /></main>
 </BaseLayout>
