put the wiki above the docs since it's less confusing at first

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -62,4 +62,16 @@ main.md {
         border: 1vmin solid $green;
         padding: 2vmin;
     }
+    ol, ul {
+        &.display {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 90vw;
+        }
+    }
+    li {
+        list-style: none;
+    }
 }
