make krita stand out

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -46,6 +46,9 @@ main.md {
             width: 80vw;
             margin: 8vmin auto;
         }
+        &.krita {
+            filter: drop-shadow(-0.25vmin 0.25vmin 0.25vmin #ffffffc2);
+        }
     }
     pre {
         padding: 3vmin;
