make it actually hammer

--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -1,6 +1,7 @@
 ---
 import MDLayout from './MDLayout.astro'
 import '../styles/markdown.scss'
+import "../styles/tutorial.scss"
 const pathname = new URL(Astro.request.url).pathname
 const { props } = Astro
 const passProps = { ...props.content }
