--- a/src/styles/tutorial.scss
+++ b/src/styles/tutorial.scss
@@ -1,8 +1,8 @@
 @keyframes pound {
-    0%, 100% {
+    0%, 80%, 100% {
         transform: none;
     }
-    80% {
+    60% {
         transform: translate(10%, -10%) rotateZ(30deg);
     }
   }
