--- a/src/styles/Icon.scss
+++ b/src/styles/Icon.scss
@@ -6,7 +6,7 @@
     margin: 3vmin 0;
     &.inline {
         height: 1em;
-        margin: 0 0.4em -0.1em 0.2em;
+        margin: -0.2em 0.4em -0.1em 0.2em;
         display: inline;
         width: auto;
     }
