convert the discourse logo to inline

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -85,7 +85,7 @@ const pathname = new URL(Astro.request.url).pathname
             </li>
             <li>
                 <a href="https://melonjs.discourse.group"
-                    ><img class="inline" src="/img/discourse.svg" />Forum
+                    ><Icon icon="discourse" class="inline"/>Forum
                 </a>
             </li>
             <li>
