improve the site accessibility

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -31,7 +31,7 @@ const pathname = new URL(Astro.request.url).pathname
                         flex-grow: 1;
                         text-align: center;
                         list-style: none;
-                        color: #9d9d9d;
+                        color: #dadada;
                         transition: background-color 0.3s ease, color 0.3s ease;
                         &.active,
                         &:hover {
